# SafePlan

./: .env.example  .gitignore  DISTRIBUTION.md  GETTING_STARTED.md  NAVIGATION_GUIDE.md  README.md  dashboard.bat  docker-compose.yml  init.sql  inspect_legacy.py  open_hub.bat  pyproject.toml  requirements.txt  run_app.py  test_app.py  test_navigation.py  tmpclaude-caee-cwd
.claude/rules/: BOT_RULES.instructions.md  BOT_RULES.md
.streamlit/: config.toml
app/: main.py
app/pages/: __init__.py  monitoring_page.py
backend/: .env.example  PHASE1_README.md  README.md  __init__.py  main.py  pyproject.toml  requirements.txt
backend/config/: __init__.py  settings.py
backend/scripts/: check_schema.py  diagnose_db.py  inspect_legacy.py  list_tables.py  migrate_corrected.py  migrate_data.py  migrate_with_id.py  quick_migrate.py  simple_migrate.py
backend/src/: __init__.py
backend/src/alerting/: __init__.py
backend/src/api/: __init__.py  routers.py  sensors.py
backend/src/data/: __init__.py  alert_repository.py  base_repository.py  database.py  models.py  reading_repository.py  sensor_repository.py
backend/src/ml/: __init__.py
backend/src/scheduler/: __init__.py
backend/src/sensors/: __init__.py
backend/src/utils/: __init__.py
backend/tests/: __init__.py
backups/backup_20260222_155523/app_original/: __init__.py  control_hub.py
backups/backup_20260222_155523/app_original/pages/: monitoring_page.py  predictions_page.py  sensor_detail_page.py  voting_group_detail_page.py
backups/backup_20260222_155523/config_original/: config_gideaopi.json  sensor_paths_buzios_demo.json
backups/backup_20260222_155523/src_original/alerting/: teams_notifier.py
backups/backup_20260222_155523/src_original/data/: models.py
backups/backup_20260222_155523/src_original/ml/: __init__.py  anomaly_detector.py  ml_engine.py  repositories.py
backups/backup_20260222_155523/src_original/pi_server/: __init__.py  af_manager.py  data_fetcher.py  pi_client.py
backups/backup_20260222_155523/src_original/sensors/: __init__.py  sensor_manager.py
config/: sensor_paths_buzios.json  sensor_paths_buzios_demo.json  settings.py
docs/: COMPLETION_REPORT.md  DATABASE_ANALYSIS_SQLITE_VS_POSTGRESQL.md  DATABASE_DECISION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_NAVIGATION_LINKS.md  FRAMEWORK_ANALYSIS.md  GRUPO_MODULO_INTEGRATION.md  GRUPO_MODULO_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_1PAGE_BRIEF.md  MIGRATION_ASSESSMENT.md  MIGRATION_COMPLETE.md  MIGRATION_COMPLETION_SUMMARY.md  MIGRATION_INDEX.md  MIGRATION_ROADMAP.md  MIGRATION_ROADMAP_V2.md  NAVIGATION_FIX.md  PHASE0_CHECKLIST.md  PHASE0_COMPLETION.md  PHASE0_PROGRESS.md  PHASE1_IMPLEMENTATION_STATUS.md  PHASE2_GUIDE.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_ML_GUIDE.md  PI_AF_INTEGRATION.md  POSTGRESQL_SETUP.md  QUICK_START_NAVIGATION.md  QUICK_START_PHASE3.txt  README.md  SENSOR_DISCOVERY_UPDATE_v2.1.md  SETUP_OPTIONS.md  START_HERE.md  Sensores.xlsx
scripts/: cleanup_db_keep_sensores_xlsx.py  create_sample_data.py  debug_matching.py  debug_sensores_xlsx.py  discover_sensor_paths.py  discover_sensors_from_af.py  example_grupo_modulo_queries.py  generate_monitoring_data.py  generate_monitoring_data_auto.py  generate_monitoring_data_bulk.py  import_sensores_xlsx.py  import_sensors_from_af.py  import_sensors_from_buzios.py  import_sensors_simple.py  init_db.py  inspect_sensores_detailed.py  inspect_sensores_xlsx.py  populate_test_readings.py  reset_db_from_sensores_xlsx.py  setup.bat  setup_credentials.py  test_af_connectivity.py  test_phase2.py  verify_phase3_setup.py
src/: __init__.py
src/alerting/: __init__.py  alert_engine.py
src/data/: __init__.py  database.py  models.py  repositories.py
src/ml/: __init__.py  forecaster.py
src/pi_server/: af_manager.py  gideaoPI.py  pi_client.py
src/scheduler/: __init__.py
src/sensors/: sensor_manager.py
tests/: __init__.py
tests/unit/: test_data_layer.py  test_ml.py
